# SunStar

./: .env.example  .gitignore  Makefile  pyproject.toml
backend/: agent.py  dependencies.py  main.py  recipe_store.py
backend/routers/: recipes.py
backend/users/: models.py  routers.py
backend/users/tests/: test_routers.py
frontend/: 404.html  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: SaveRecipeForm.vue
frontend/src/composables/: useRecipeSearch.ts  useSaveRecipe.ts
frontend/src/lib/: ndjsonStream.ts
scripts/: run_detached.py
