
[project]
name = "sunstar"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "email-validator",
    "sqlmodel",
    "httpx",
    "langchain",
    "langchain-openai",
    "langchain-chroma",
    "langgraph",
    "tavily",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.fastapi]
entrypoint = "backend.main:app"
